--- a/package.json
+++ b/package.json
@@ -1,7 +1,6 @@
 {
   "name": "esportmaniacos",
   "version": "0.1.0",
-  "homepage": "https://chrisesbueno.github.io/esportmaniacos-web/",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.5",
@@ -11,15 +10,13 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.5.0",
-    "react-scripts": "5.0.1",
+    "react-scripts": "^2.1.3",
     "react-twitter-widgets": "^1.11.0",
     "swiper": "^8.4.5",
     "use-react-screenshot": "^3.0.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
-    "predeploy": "npm run build",
-    "deploy": "gh-pages -d build https://$GH_TOKEN@github.com/chrisesbueno/esportmaniacos-web/",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
@@ -42,8 +39,5 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  },
-  "devDependencies": {
-    "gh-pages": "^4.0.0"
   }
 }
